Closed
Bug 1925245
Opened 4 months ago
Closed 4 months ago
Washed out system colors with gfx.color_management.mode = 1 on windows.
Categories
(Core :: Graphics: Color Management, defect)
Core
Graphics: Color Management
Tracking
()
RESOLVED
FIXED
133 Branch
Tracking | Status | |
---|---|---|
firefox133 | --- | fixed |
People
(Reporter: emilio, Assigned: emilio)
References
(Blocks 1 open bug, Regressed 1 open bug)
Details
Attachments
(1 file)
With gfx.color_management.mode = 1, windows system colors are washed out. I think they're getting double-managed.
Assignee | ||
Comment 1•4 months ago
|
||
This is very visible if you have things like "accent color in titlebar" kinda settings.
Assignee | ||
Comment 2•4 months ago
|
||
System colors are sRGB, don't double-transform them depending on
gfx.color_management.mode.
They'll be transformed later when rendering them via ToDeviceColor.
Updated•4 months ago
|
Assignee: nobody → emilio
Status: NEW → ASSIGNED
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/b964be215758
Don't transform system colors twice. r=gfx-reviewers,lsalzman
Status: ASSIGNED → RESOLVED
Closed: 4 months ago
status-firefox133:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 133 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•