Bug 1925245 - Don't transform system colors twice. r=gfx-reviewers,lsalzman

System colors are sRGB, don't double-transform them depending on
gfx.color_management.mode.

They'll be transformed later when rendering them via ToDeviceColor.

Differential Revision: https://phabricator.services.mozilla.com/D225946